compiler/fir/analysis-tests/testData/resolveWithStdlib/contracts/fromSource/bad/callsInPlace/inLocalFunction.dot
digraph inLocalFunction_kt {
    graph [nodesep=3]
    node [shape=box penwidth=2]
    edge [penwidth=2]

    subgraph cluster_0 {
        color=red
        0 [label="Enter file inLocalFunction.kt" style="filled" fillcolor=red];
        1 [label="Exit file inLocalFunction.kt" style="filled" fillcolor=red];
    }
    0 -> {1} [color=green];

    subgraph cluster_1 {
        color=red
        2 [label="Enter function foo" style="filled" fillcolor=red];
        subgraph cluster_2 {
            color=blue
            3 [label="Enter block"];
            subgraph cluster_3 {
                color=blue
                4 [label="Enter block"];
                5 [label="Exit block"];
            }
            6 [label="Local function declaration"];
            7 [label="Function call: R|<local>/localFun|()" style="filled" fillcolor=yellow];
            8 [label="Function call: R|<local>/b|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
            9 [label="Exit block"];
        }
        10 [label="Exit function foo" style="filled" fillcolor=red];
    }
    subgraph cluster_4 {
        color=blue
        11 [label="Enter function localFun" style="filled" fillcolor=red];
        subgraph cluster_5 {
            color=blue
            12 [label="Enter block"];
            13 [label="Access variable R|<local>/a|"];
            14 [label="Function call: R|<local>/a|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
            15 [label="Function call: R|<local>/a|.R|SubstitutionOverride<kotlin/Function0.invoke: R|kotlin/Unit|>|()" style="filled" fillcolor=yellow];
            16 [label="Exit block"];
        }
        17 [label="Exit function localFun" style="filled" fillcolor=red];
    }
    2 -> {3};
    3 -> {4};
    4 -> {5};
    5 -> {6};
    6 -> {7 11};
    6 -> {11} [style=dashed];
    7 -> {8};
    8 -> {9};
    9 -> {10};
    11 -> {12};
    12 -> {13};
    13 -> {14};
    14 -> {15};
    15 -> {16};
    16 -> {17};

}
